Addition of testimonial features

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,9 +145,19 @@ a {
     height: 40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary);
 }
+
+.icon--white {
+    fill: #fff;
+}
+
 .icon-container {
     background: #f3f9fa;
     width: 64px;
@@ -157,6 +167,10 @@ a {
     justify-content: center;
     align-items: center;
 }
+.icon-container--accent {
+    background: var(--color-accent);
+}
+
 /* Buttons */
 .btn {
     border-radius: 40px;
@@ -359,4 +373,74 @@ a {
 }
 .quote__text::after {
     content: close-quote;
+}
+.quote__author {
+    font-size: 3rem;
+    font-weight: 500;
+    font-style: normal;
+    margin-bottom: 0;
+}
+.quote__organization {
+    color: var(--color-headings);
+    opacity: 0.4;
+    font-size: 2rem;
+    font-style: normal;
+}
+.quote__line {
+    position: relative;
+    bottom: 10px;
+}
+@media screen and (min-width: 1024px) {
+    .quote {
+        font-size: 2rem;
+    }
+    .quote__author {
+        font-size: 2.4rem;
+    }
+    .quote__organization {
+        font-size: 1.6rem;
+    }
+}
+/* Grids */
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width: 768px) {
+    .grid--1x2 {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .grid--1x3 {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* Testimonial */
+.testimonial {
+    padding: 3rem;
+}
+
+.testimonial__image {
+    position: relative;
+}
+.testimonial__image > img {
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote,
+    .testimonial .quote__author {
+        font-size: 2.4rem;
+    }
+    .testimonial .quote {
+        margin-left: 6rem;
+    }
 }
