--- a/css/styles.css
+++ b/css/styles.css
@@ -328,11 +328,18 @@ a {
     background: var(--color-secondary);
     color: #fff;
 }
+.card--primary .badge--primary {
+    background: #126de4;
+}
 .card--secondary .badge--secondary {
     background: #02cdf1;
 }
 
 /* Plans */
+.plan {
+    transition: transform: 2s ease-out;
+}
+
 .plan__name {
     color: #fff;
     margin: 0;
@@ -360,6 +367,11 @@ a {
 .plan .list__item {
     margin-bottom: 2rem;
 }
+
+.plan--popular {
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header {
     position: relative;
 }
@@ -372,6 +384,12 @@ a {
     right: 5%;
 }
 
+.plan:hover {
+    transform: scale(1.05);
+}
+.plan--popular:hover {
+    transform: scale(1.15);
+}
 
 @media screen and (min-width: 1024px) {
     .plan__name {
@@ -705,4 +723,18 @@ a {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
 
     }
+}
+
+/* Plans Block */
+.block-plans .grid {
+    gap: 8rem 4rem;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.block-features {
+
 }
