addition of showcases

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,11 @@
 }
 
 /* Typography */
+::selection {
+    background: var(--color-primary);
+    color: white;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -63,6 +68,7 @@ p {
     }
     h3 {
         font-size: 2.4rem;
+        font-weight: 500;
     }
 }
 /* Links */
@@ -124,7 +130,7 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
+    
 }
 .list--inline .list__item {
     display: inline-block;
@@ -133,6 +139,7 @@ a {
 .list--tick {
     list-style-image: url(../images/tick.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 .list--tick .list__item {
     padding-left: 0.5rem;
@@ -411,6 +418,7 @@ a {
 /* Media */
 .media {
     display: flex;
+    margin-bottom: 4rem;
 
 }
 .media__title {
@@ -590,9 +598,14 @@ a {
 .block__heading {
     margin-top: 0;
 }
+
 .block--dark {
     background: #000;
     color: #7b858b;
+}
+
+.block--dark h1, .block--dark h2, .block--dark h3 {
+    color: #fff;
 }
 
 .block--dark .block__heading {
@@ -601,11 +614,11 @@ a {
 
 .block--skewed-right {
     padding-bottom: var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 99% 0%, 100% 100%, 0% 80%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
 }
 .block--skewed-left {
     padding-bottom: var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .container {
@@ -685,9 +698,6 @@ a {
     width: 100%;
 }
 
-.hero {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
 
 @media screen and (min-width: 768px) {
     .hero {
@@ -763,4 +773,23 @@ a {
         order: 2;
     }
 
+}
+
+/* Showcase Block */
+.block-showcase__image >img {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+    .block-showcase_image {
+        justify-self: end;
+    }
+
+    .block-showcase__image {
+        width: auto;
+        max-width: 700px;
+    }
 }
