--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ a {
     padding-left: 0.5rem;
     margin-bottom: 1rem;
 }
-@media screen and (min-width: 1024px);
+@media screen and (min-width: 1024px) {
     .list--tick .list__item {
         padding-left: 0;
     }
@@ -219,7 +219,7 @@ a {
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -285,7 +285,7 @@ a {
 
 /* Inputs */
 .input {
-    border-radius: var(--border-radius)
+    border-radius: var(--border-radius);
     border: 1px solid var(--color-border);
     color: var(--color-headings);
     font-size: 2rem;
@@ -306,6 +306,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -344,7 +345,7 @@ a {
 
 /* Plans */
 .plan {
-    transition: transform: 2s ease-out;
+    transition; transform 2s ease-out;
 }
 
 .plan__name {
@@ -505,6 +506,11 @@ a {
     right: -32px;
 }
 
+.testimonial__title {
+    align-items: center;
+    text-align: center;
+    padding-bottom: 4px;
+}
 @media screen and (min-width: 768px) {
     .testimonial .quote,
     .testimonial .quote__author {
@@ -588,7 +594,7 @@ a {
 /* Blocks */
 .block {
     --padding-vertical: 6rem;
-    padding: var(--padding-vertical); 2rem;
+    padding: var(--padding-vertical): 3rem;
 }
 
 .block__header {
@@ -719,8 +725,9 @@ a {
     max-width: 670px;
 }
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
